<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_hostname_error"
        android:inputType="textCapWords"
        android:key="hostP2play"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_hostname_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_nfsw"
        android:summary="@string/pref_nfsw_description"
        android:title="@string/pref_nfsw_title" />

    <EditTextPreference
        android:defaultValue="15"
        android:inputType="number"
        android:key="videos_count"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_videos_count_title" />

</PreferenceScreen>
