<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
