<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Logo"
                app:srcCompat="@drawable/icon" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/registerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginInfo"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/userTxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userTxt" />

            <EditText
                android:id="@+id/userText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userText"
                android:inputType="text" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailTxt" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailText"
                android:inputType="text" />

            <TextView
                android:id="@+id/passwordTxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordTxt" />

            <EditText
                android:id="@+id/passwordText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwordText"
                android:inputType="text|textPassword" />

            <Button
                android:id="@+id/registerBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerBtn"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>