<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChannelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorProfile"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/channelImg"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:adjustViewBounds="false"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/default_avatar" />

                <TextView
                    android:id="@+id/usernameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/followersIndicator"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/subcriptionsTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hostIndicator"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/hostTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/subcriptionBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribeBtn"
                    android:textAlignment="center"
                    android:visibility="invisible" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Videos:"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="176dp"
                    tools:layout_editor_absoluteY="214dp" />
            </FrameLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listVideosChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>